<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Let\'s Meet</string>
    <string name="facebook_app_id">583266458397779</string>
    <string name="googlemaps_apikey">AIzaSyCIDkhNXVK0fjgWerhaCyOk-ViKSKUfCQM</string>
    <string name="parse_applicationid">pDbYtI220auCpqkdW6s12gE0SvL9oWOnO2mOLIBf</string>
    <string name="parse_clientid">cpaN2PQcbcdDPs248FlW7Qn5PrPF2uNU7HHvWomJ</string>
    
	<string name="facebook_login_button_logintext">Log in with Facebook</string>
	<string name="facebook_login_button_logouttext">Log out</string>
	<string name="facebook_login_progress_text">Logging in…</string>
	<string name="facebook_logout_dialog_title">Are you sure you want to logout?</string>
	
	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">Close drawer</string>
	
	<string name="actionitem_confirm">Confirm</string>
	<string name="actionitem_addperson">Invite friend</string>
	
	<string name="eventtype_sports">Sports</string>
	<string name="eventtype_party">Party</string>
	<string name="eventtype_meeting">Meeting</string>
	<string name="eventtype_other">Other</string>
	
	<string name="eventaudience_public">Public</string>
	<string name="eventaudience_private">Private</string>
	
	<string name="feed_drawer_newevent">New event</string>
	<string name="feed_drawer_checkins">Check-ins</string>
	<string name="feed_drawer_settings">Settings</string>
	<string name="feed_drawer_logout">Logout</string>
	
	<string name="feedactivity_sort_newest">Newest events</string>
	<string name="feedactivity_sort_type">Type of event</string>
	
	<string name="feedactivity_participants">%1$d participants</string>
	
	<string name="loginactivity_spammessage">We use facebook to find your friends, not spam your wall.</string>
	<string name="loginactivity_errornetwork">You need network connection to login.</string>
	
	<string name="eventactivity_openedby">Event opened by</string>
	<string name="eventactivity_comments">Comments</string>
	<string name="eventactivity_entercomment">Add a comment</string>
	<string name="eventactivity_error_nomapshown">The map could not be shown. Verify your internet connection.</string>
	
	<string name="friendchooseractivity_fetchingfriends">Searching for friends…</string>
	<string name="friendchooseractivity_selectfriends">Confirm selection</string>
	<string name="friendchooseractivity_fetchingerror">We could not find your friends :-(</string>
	
	<string name="neweventactivity_category_what">What</string>
	<string name="neweventactivity_hint_title">Event\'s name</string>
	<string name="neweventactivity_hint_description">Event\'s description</string>
	<string name="neweventactivity_category_whatkind">What kind</string>
	<string name="neweventactivity_category_where">Where</string>
	<string name="neweventactivity_where_empty_buttontext">Where is the meeting?</string>
	<string name="neweventactivity_category_whattime">What time</string>
	<string name="neweventactivity_category_whom">With whom</string>
	<string name="neweventactivity_whom_empty">You still haven\'t invited any friends</string>
	<string name="neweventactivity_whom_empty_buttontext">Invite \'em!</string>
	<string name="neweventactivity_error_emptytitle">You must fill the event\'s title</string>
	<string name="neweventactivity_error_emptylocation">You didn\'t choose a place for the event!</string>
	
	<string name="locationpicker_infowindowsnippet_clicktoselect">Click to select location</string>
	<string name="locationpicker_placenotfound">Location not found</string>
	<string name="locationpicker_emptysearchfield">This field must be filled</string>
	<string name="locationpicker_geocodingerror">An error occurred while locating the address</string>
	
</resources>
