<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vamosmarcar="http://schemas.android.com/apk/res/br.com.zynger.vamosmarcar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/neweventactivity_category_what"
                android:textColor="@color/lightgray"
                android:textSize="12sp" />

            <EditText
                android:id="@+neweventactivity/et_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/neweventactivity_hint_title"
                android:inputType="textShortMessage"
                android:maxLines="1" />

            <EditText
                android:id="@+neweventactivity/et_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/neweventactivity_hint_description"
                android:maxLines="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/neweventactivity_category_whatkind"
                android:textColor="@color/lightgray"
                android:textSize="12sp" />

            <br.com.zynger.vamosmarcar.view.FlowRadioGroup
                android:id="@+neweventactivity/frg_typeofevent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp" />

            <RadioGroup
                android:id="@+neweventactivity/rg_audience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:gravity="center"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="7dp"
                android:text="@string/neweventactivity_category_where"
                android:textColor="@color/lightgray"
                android:textSize="12sp" />

            <Button
                android:id="@+neweventactivity/bt_placeempty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/neweventactivity_where_empty_buttontext" />

            <br.com.zynger.vamosmarcar.view.GoogleMapImageView
                android:id="@+neweventactivity/gmiv_map"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <br.com.zynger.vamosmarcar.view.RobotoTextView
                android:id="@+neweventactivity/tv_place"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/lightblack"
                android:textSize="18sp"
                android:visibility="gone"
                vamosmarcar:typeface="roboto_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:text="@string/neweventactivity_category_whattime"
                    android:textColor="@color/lightgray"
                    android:textSize="12sp" />

                <Button
                    android:id="@+neweventactivity/calendarbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:id="@+neweventactivity/ll_times"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="7dp"
                android:text="@string/neweventactivity_category_whom"
                android:textColor="@color/lightgray"
                android:textSize="12sp" />

            <br.com.zynger.vamosmarcar.view.FlowLayout
                android:id="@+neweventactivity/fl_people"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:visibility="gone"
                vamosmarcar:horizontalSpacing="3dp"
                vamosmarcar:verticalSpacing="3dp" />

            <LinearLayout
                android:id="@+neweventactivity/ll_peopleempty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_addfriends" />

                <br.com.zynger.vamosmarcar.view.RobotoTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/neweventactivity_whom_empty"
                    android:textColor="@color/darkgray"
                    vamosmarcar:typeface="roboto_medium" />

                <Button
                    android:id="@+neweventactivity/bt_peopleempty"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/neweventactivity_whom_empty_buttontext" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>