<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fold_world"
    android:orientation="vertical" >

    <ImageView
        android:id="@+loginactivity/iv_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+loginactivity/rl_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+loginactivity/ll_progress"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <br.com.zynger.vamosmarcar.view.FacebookImageView
            android:id="@+loginactivity/iv_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+loginactivity/ll_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+loginactivity/pb_progress"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+loginactivity/tv_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:text="@string/facebook_login_progress_text"
            android:textColor="@color/login_text"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+loginactivity/bt_auth"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_above="@+loginactivity/tv_spammessage"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/facebook_login_button_logintext"
        android:textColor="@android:color/white"
        android:background="@drawable/com_facebook_button_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+loginactivity/tv_spammessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/loginactivity_spammessage"
        android:textColor="@color/login_text" />

</RelativeLayout>